ArtisanAssistCode/force-app/main/default/objects/Question_Answer__c/Question_Answer__c.object-meta.xml
<CustomObject>
    <description>Questions and answers are used to clarify requirements for the parent Assistance Request</description>
    <label>Question &amp; Answer</label>
    <nameField>
        <displayFormat>CQA{00000000}</displayFormat>
        <label>Q&amp;A Ref#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Questions &amp; Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>