ArtisanAssistCode/force-app/main/default/objects/Question_Answer__c/fields/Answer__c.field-meta.xml
<CustomField>
    <fullName>Answer__c</fullName>
    <inlineHelpText>The answer to the question</inlineHelpText>
    <label>Answer</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>