ArtisanAssistCode/force-app/main/default/objects/Question_Answer__c/fields/Answered_by_Email__c.field-meta.xml
<CustomField>
    <fullName>Answered_by_Email__c</fullName>
    <inlineHelpText>The email address of the person who first answered this question</inlineHelpText>
    <label>Answered by Email</label>
    <type>Email</type>
</CustomField>