ArtisanAssistCode/force-app/main/default/objects/Question_Answer__c/fields/Answered_by_Name__c.field-meta.xml
<CustomField>
    <fullName>Answered_by_Name__c</fullName>
    <inlineHelpText>The name of the person who first answered this question</inlineHelpText>
    <label>Answered by Name</label>
    <length>128</length>
    <type>Text</type>
</CustomField>