ArtisanAssistCode/force-app/main/default/objects/Question_Answer__c/fields/Answered_by_Phone__c.field-meta.xml
<CustomField>
    <fullName>Answered_by_Phone__c</fullName>
    <inlineHelpText>The phone number of the person who first answered this question</inlineHelpText>
    <label>Answered by Phone</label>
    <type>Phone</type>
</CustomField>