ArtisanAssistCode/force-app/main/default/objects/Question_Answer__c/fields/Artisan_Question_Answer_Id__c.field-meta.xml
<CustomField>
    <fullName>Artisan_Question_Answer_Id__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>The Question &amp; Answer Id in Artisan&#39;s Salesforce org</inlineHelpText>
    <label>Artisan Q&amp;A Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>