ArtisanAssistCode/force-app/main/default/objects/Question_Answer__c/fields/Asked_by_Email__c.field-meta.xml
<CustomField>
    <fullName>Asked_by_Email__c</fullName>
    <inlineHelpText>The email address of the person who asked this question</inlineHelpText>
    <label>Asked by Email</label>
    <type>Email</type>
</CustomField>