ArtisanAssistCode/force-app/main/default/objects/Question_Answer__c/fields/Asked_by_Name__c.field-meta.xml
<CustomField>
    <fullName>Asked_by_Name__c</fullName>
    <inlineHelpText>The name of the user who asked this question</inlineHelpText>
    <label>Asked by Name</label>
    <length>128</length>
    <type>Text</type>
</CustomField>