ArtisanAssistCode/force-app/main/default/objects/Question_Answer__c/fields/Asked_by_Phone__c.field-meta.xml
<CustomField>
    <fullName>Asked_by_Phone__c</fullName>
    <inlineHelpText>The phone number of the person who asked this question</inlineHelpText>
    <label>Asked by Phone</label>
    <type>Phone</type>
</CustomField>