ArtisanAssistCode/force-app/main/default/objects/Question_Answer__c/fields/Assistance_Request_Id__c.field-meta.xml
<CustomField>
    <fullName>Assistance_Request_Id__c</fullName>
    <inlineHelpText>The parent assistance request</inlineHelpText>
    <label>Assistance Request</label>
    <referenceTo>Assistance_Request__c</referenceTo>
    <relationshipName>Questions_Answers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>