ArtisanAssistCode/force-app/main/default/objects/Question_Answer__c/fields/IsOpen__c.field-meta.xml
<CustomField>
    <fullName>IsOpen__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>True if no answer has been provided</inlineHelpText>
    <label>Open</label>
    <type>Checkbox</type>
</CustomField>