ArtisanAssistCode/force-app/main/default/objects/Question_Answer__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <inlineHelpText>The question you want answered</inlineHelpText>
    <label>Question</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>