ArtisanAssistCode/force-app/main/default/objects/Question_Answer__c/recordTypes/Artisan_Question.recordType-meta.xml
<RecordType>
    <fullName>Artisan_Question</fullName>
    <active>true</active>
    <description>A question asked by Artisan</description>
    <label>Artisan Question</label>
</RecordType>