ArtisanAssistCode/force-app/main/default/objects/Question_Answer__c/recordTypes/Customer_Question.recordType-meta.xml
<RecordType>
    <fullName>Customer_Question</fullName>
    <active>true</active>
    <description>A question asked by the Customer</description>
    <label>Customer Question</label>
</RecordType>